Bug 1748640 - Revert behavior change from bug 1737831 on notch-less macbooks, and add a pref to control this behavior. r=mac-reviewers,bradwerth

Differential Revision: https://phabricator.services.mozilla.com/D135651